JumpScript/tests/baselines/reference/parser509668.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser509668.jump(3,16): error TS1317: A parameter property cannot be declared using a rest parameter.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser509668.jump (1 errors) ====
    class Foo3 {
      // Doesn't work, but should
      constructor (public ...args: string[]) { }
                   ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1317: A parameter property cannot be declared using a rest parameter.
    }